# celestial_navigation_pi

./: CMakeLists.txt  CelestialNavigation.fbp  bldwin-rdeb.sh  build-win.sh
.circleci/: config.yml
cmake/in-files/: cloudsmith-upload.sh.in
data/: Celestial_Navigation_Definitions.html  Celestial_Navigation_Information.html
po/: POTFILES.in  POTFILES.in.test
src/: CelestialNavigationDialog.cpp  CelestialNavigationDialog.h  CelestialNavigationUI.cpp  CelestialNavigationUI.h  ClockCorrectionDialog.cpp  ClockCorrectionDialog.h  FindBodyDialog.cpp  FindBodyDialog.h  FixDialog.cpp  FixDialog.h  LunarResultsDialog.cpp  LunarResultsDialog.h  Sight.cpp  Sight.h  SightDialog.cpp  SightDialog.h  celestial_navigation_pi.cpp  celestial_navigation_pi.h  epv00.cpp  geodesic.c  geodesic.h  icons.cpp  icons.h  moon.cpp  moon.h  transform_star.cpp  transform_star.hpp
src/astrolabe/: astrolabe.hpp  calendar.cpp  dicts.cpp  dynamical.cpp  elp2000.cpp  equinox.cpp  globals.cpp  nutation.cpp  riseset.cpp  sun.cpp  util.cpp  vsop87d.cpp
src/geomag/: geomag.c
src/plugin_dc/dc_utils/src/: pidc.cpp
test/: CMakeLists.txt  altitude_tests.cpp  common.cpp  common.h  lunar_tests.cpp  mock_plugin_api.cpp  mock_plugin_api.h  mock_plugin_impl.cpp
